# PixelsPointsPolygons

./: .gitignore  .gitmodules  README.md  config.py  config_arno.py  ddp_utils.py  engine.py  evaluate_gt.csv  install.sh  lines_image.txt  metrics_iou_polis_mta.csv  metrics_iou_polis_mta.tex  metrics_stats.csv  metrics_stats.tex  polygons.dbf  polygons.shp  polygons.shx  postprocess_coco_parts.py  predict.py  predict_inria_coco_val_set.py  predict_inria_coco_val_set_arno.py  predict_lidarpoly_coco.py  predict_mass_roads_test_set.py  predict_spacenet_coco_val_set.py  predict_whu_buildings_coco_test_set.py  pyproject.toml  requirements-torch-cuda.txt  scratch.py  setup.py  todo.md  tokenizer.py  train.py  train_ddp.py  utils.py  utils_ori.py
conf/: config.yaml
config/: config.yaml  config_Switzerland.yaml
data_preprocess/: inria_to_coco.py  merge_coco_annotations.py
datasets/: build_datasets.py  dataset_inria_coco.py
demo_data/: image0_CH_val.tif  lidar0_CH_val.copc.laz
lidarpoly/: install.sh  scratch.py  setup.py
models/: build_model.py  model.py  model_ori.py
oar/: README.md  dino_ablation_predict.sh  ffl_NZ.sh  ffl_all.sh  ffl_image_015.sh  hisup_all.sh  job.sh  job_fusion_ffl.sh  job_fusion_hisup.sh  job_fusion_p2p.sh  job_image.sh  job_image_ffl.sh  job_image_hisup.sh  job_image_p2p.sh  job_lidar.sh  job_lidar_ffl.sh  job_lidar_ffl_128.sh  job_lidar_ffl_16.sh  job_lidar_ffl_256.sh  job_lidar_ffl_32.sh  job_lidar_ffl_4.sh  job_lidar_ffl_512.sh  job_lidar_ffl_64.sh  job_lidar_ffl_8.sh  job_lidar_hisup.sh  job_lidar_p2p.sh  job_single_gpu.sh  p2p_all.sh  p2p_building_ann.sh  p2p_dinov2.sh  p2p_image.sh  p2p_image_convnext_tiny.sh  p2p_image_dinov1.sh  p2p_image_dinov2.sh  p2p_image_dinov3.sh  p2p_lidar50.sh  p2p_lidar_dinov3_full_ds.sh
pixelspointspolygons/: __init__.py  engine.py  predictor.py  trainer.py
polygon_predictions/: image_CH_test.dbf  image_CH_test.shp  image_CH_test.shx  image_CH_val.dbf  image_CH_val.shp  image_CH_val.shx  lidar_pp_vit_bs2x16_mnv64_CH_val.dbf  lidar_pp_vit_bs2x16_mnv64_CH_val.shp  lidar_pp_vit_bs2x16_mnv64_CH_val.shx  nimes.shx  out.dbf  out.shp  out.shx  v4_image_vit_bs4x16_CH_val.dbf  v4_image_vit_bs4x16_CH_val.shp  v4_image_vit_bs4x16_CH_val.shx
results/: metrics  metrics.csv  metrics_all_countries_all_test.csv  metrics_all_countries_all_test.tex  metrics_all_countries_all_val.csv  metrics_all_countries_all_val.tex  metrics_backbone_ablation_CH_test.csv  metrics_backbone_ablation_CH_test.tex  metrics_coco.csv  metrics_coco.tex  metrics_dinov2_ablation_CH_test.csv  metrics_dinov2_ablation_CH_test.tex  metrics_dinov2_ablation_CH_val.csv  metrics_dinov2_ablation_CH_val.tex  metrics_droplidar50_ablation_CH_val.csv  metrics_droplidar50_ablation_CH_val.tex  metrics_image_res_ablation_Switzerland_test.csv  metrics_image_res_ablation_Switzerland_test.tex  metrics_iou.csv  metrics_iou.tex  metrics_iou_mta_polis.csv  metrics_iou_mta_polis.tex  metrics_iou_polis_mta.csv  metrics_iou_polis_mta.tex  metrics_ldof.csv  metrics_lidar_density_ablation_Switzerland_test.csv  metrics_lidar_density_ablation_Switzerland_test.tex  metrics_modality_ablation.csv  metrics_modality_ablation.tex  metrics_modality_ablation_CH_test.csv  metrics_modality_ablation_NY_test.csv  metrics_modality_ablation_NY_test.tex  metrics_modality_ablation_NY_val.csv  metrics_modality_ablation_NY_val.tex  metrics_modality_ablation_NZ_val.csv  metrics_modality_ablation_NZ_val.tex  metrics_modality_ablation_Switzerland_test.csv  metrics_modality_ablation_Switzerland_test.tex  metrics_modality_ablation_Switzerland_val.csv  metrics_modality_ablation_Switzerland_val.tex  (+8 more)
scripts/: all_countries.py  create_ds_tree.sh  csv2latex.py  dino_v2.py  (+29 more)
(+374 files in other folders)
