[build-system]
requires = ["setuptools>=61.0", "torch", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelspointspolygons"
version = "0.1.0"
description = "The P3 dataset: Pixels, Points and Polygons for Multimodal Building Vectorization"
authors = [
    { name = "Raphael Sulzer", email = "raphael.sulzer.1@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations",
    "colorlog",
    "descartes",
    "huggingface_hub",
    "hydra-core",
    "laspy[lazrs]",
    "matplotlib",
    "numpy",
    "pandas",
    "pycocotools",
    "rasterio",
    "scikit-image",
    "scikit-learn",
    "shapely",
    "tensorboard",
    "timm",
    "torchmetrics",
    "transformers",
    "wandb",
    # only for hisup
    "Cython",
    # only for FFL preprocessing
    "kornia",
    "skan",
    "jsmin",
    # only for FFL ASM polygonization (default is ACM)
    # "torch-scatter" ## takes forever so making it optional
    # for dinov3:
    "termcolor",
    # for geoprediction
    "geopandas"
]

[tool.setuptools]
packages = ["pixelspointspolygons"]

[tool.setuptools.package-data]
pixelspointspolygons = ["conf/*.yaml"]
